// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform import 1`] = `
"import * as React from \\"react\\"
import { Foo } from \\"bar\\"
    import { Button } from \\"@/components/ui/button\\"
    import { Label} from \\"ui/label\\"
    import { Box } from \\"@/components/box\\"

    import { cn } from \\"@udecode/cn\\"
    "
`;

exports[`transform import 2`] = `
"import * as React from \\"react\\"
import { Foo } from \\"bar\\"
    import { Button } from \\"~/src/components/ui/button\\"
    import { Label} from \\"ui/label\\"
    import { Box } from \\"~/src/components/box\\"

    import { cn, foo, bar } from \\"@udecode/cn\\"
    "
`;

exports[`transform import 3`] = `
"import * as React from \\"react\\"
import { Foo } from \\"bar\\"
    import { Button } from \\"~/src/components/ui/button\\"
    import { Label} from \\"ui/label\\"
    import { Box } from \\"~/src/components/box\\"

    import { cn } from \\"@udecode/cn\\"
    "
`;
